Bug 476317 - after install 2261 my animation slice up on 5.3
Summary: after install 2261 my animation slice up on 5.3
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: regression, release_blocker
Depends on:
Blocks:
 
Reported: 2023-10-30 08:34 UTC by lizard_olmighty
Modified: 2024-02-28 18:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description lizard_olmighty 2023-10-30 08:34:39 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 11
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
After install version 2261 my animation move up per layer
Comment 1 Dmitry Kazakov 2023-10-30 08:43:30 UTC
That is the same report as on KA:
https://krita-artists.org/t/need-testing-animated-transformation-masks-rewritten/76229/13
Comment 2 Dmitry Kazakov 2023-10-30 11:38:29 UTC
I can confirm the issue using the test file that was sent by the reporter to my private email.
Comment 3 Dmitry Kazakov 2023-11-06 13:24:01 UTC
Git commit b24a3488cf23baa6ad0e41b8aef76cdf0787af87 by Dmitry Kazakov.
Committed on 06/11/2023 at 14:23.
Pushed by dkazakov into branch 'master'.

Fix an offset when opening files with animated transform masks

Our curves should be centered againt the rotation center.

The current implementation still has a bug that the curve value
is **not** the position of the rotation center, but (position -
rotationCenterOffset), which is a completely nonsensial value.
But since it is baked into .kra format, we should keep it this
way for now.

M  +43   -2    plugins/tools/tool_transform2/KisAnimatedTransformMaskParamsHolder.cpp

https://invent.kde.org/graphics/krita/-/commit/b24a3488cf23baa6ad0e41b8aef76cdf0787af87
Comment 4 Dmitry Kazakov 2023-11-06 13:25:58 UTC
Just for the sake of completeness, this package should fix the issue:

https://binary-factory.kde.org/job/Krita_Nightly_Windows_Build/2273/
Comment 5 Dmitry Kazakov 2024-02-28 18:09:41 UTC
Git commit 7f3152798a08615d41e4e7cd6e0390b6cc67c0e1 by Dmitry Kazakov.
Committed on 28/02/2024 at 12:49.
Pushed by dkazakov into branch 'kazakov/for-5.2'.

Fix an offset when opening files with animated transform masks

Our curves should be centered againt the rotation center.

The current implementation still has a bug that the curve value
is **not** the position of the rotation center, but (position -
rotationCenterOffset), which is a completely nonsensial value.
But since it is baked into .kra format, we should keep it this
way for now.

M  +43   -2    plugins/tools/tool_transform2/KisAnimatedTransformMaskParamsHolder.cpp

https://invent.kde.org/graphics/krita/-/commit/7f3152798a08615d41e4e7cd6e0390b6cc67c0e1